feature: about page request

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -21,7 +21,7 @@
     font-family: 'Circular Medium';
     font-style: normal;
     src: local('circular-medium'),
-      url(/fonts/google/oswald/circular-medium.woff) format('woff');
+      url(/fonts/circular-medium.woff) format('woff');
     font-display: swap;
   }
 
@@ -29,15 +29,15 @@
     font-family: 'Circular Book';
     font-style: normal;
     src: local('circular-book'),
-      url(/fonts/google/oswald/circular-book.woff) format('woff');
+      url(/fonts/circular-book.woff) format('woff');
     font-display: swap;
   }
 
   @font-face {
-    font-family: 'Circular Medium';
-    font-style: normal;
-    src: local('circular-medium'),
-      url(/fonts/google/oswald/circular-book-italic.woff) format('woff');
+    font-family: 'Circular Italic';
+    font-style: italic;
+    src: local('circular-italic'),
+      url(/fonts/circular-book-italic.woff) format('woff');
     font-display: swap;
   }
 
