feature: home page swipable.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,6 +17,10 @@
     overflow: hidden;
   }
 
+  img {
+    user-select: none;
+  }
+
   @font-face {
     font-family: 'Circular Medium';
     font-style: normal;
